--- a/projects/mp-forest-mantenimiento-correspondencia/src/assets/i18n/es.json
+++ b/projects/mp-forest-mantenimiento-correspondencia/src/assets/i18n/es.json
@@ -90,7 +90,8 @@
           "entradaSubRadicadoTipoDocumentalRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El registro con el subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, para la clase documental \"Entrada\"",
           "campoSubRadciadoTipoDocumentalRepetidoFiltradoError": "Fila {{filaRep1}}: El registro con la plantilla \"{{plantilla}}\", subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, en los registros filtrados",
           "claseDocumentalDiferenteFiltradoError": "Fila {{filaRep1}}: Para el registro con la plantilla \"{{plantilla}}\", Subtipo de radicado \"{{subRadicado}}\", existe un registro con la clase documental diferente, en los registros filtrados",
-          "entradaSubRadicadoTipoDocumentalRepetidoFiltradoError": "Fila {{filaRep1}}: El registro con el subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, para la clase documental \"Entrada\" en los registros filtrados"              
+          "entradaSubRadicadoTipoDocumentalRepetidoFiltradoError": "Fila {{filaRep1}}: El registro con el subtipo de radicado \"{{subRadicado}}\" y tipo documental \"{{tipoDocumental}}\" está repetido, para la clase documental \"Entrada\" en los registros filtrados",
+          "elminiarPlantillaError" : "La plantilla \"{{plantilla}}\" no puede ser eliminada: Se encuentra asociada a uno o más borradores y/o radicados en el sistema"             
   
       },
       "TABLA1": {
@@ -270,6 +271,7 @@
           "errorCampoVacio": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
           "errorGuardarCampo": "Diligenciar todos los campos requeridos",
           "falloObtenerAcionesDocumentales":"Error al obtener las Acciones Documentales",
+          "identificacionRepetida2": "Filas {{filaRep1}} y {{filaRep2}}: El tipo de identificación \"{{tipoIdentificacion}}\" ya se encuentra repetido, por favor validar",
           "identificacionRepetida": "El tipo de identificación \"{{tipoIdentificacion}}\" ya se encuentra asociado al tipo de persona \"{{tipoPersona}}\"",
           "errorEliminarFijo": "No se puede eliminar el tipo de identificación \"{{tipoIdentificacion}}\" seleccionado, esta configuración es estándar para el tipo de persona \"{{tipoPersona}}\"",
           "errorPersonaAnonima": "No se pueden agregar más tipos de identificación para el tipo de persona Anónima", 
@@ -331,7 +333,12 @@
           "guardarError" : "Error al guardar",
           "errorHoraInicio": "La hora final del recorrido no puede ser menor a la hora inicial, por favor validar",
           "eliminarFallido1": "El recorrido ",
-          "eliminarFallido2": " no puede ser eliminado: Ya se encuentra creado, en caso de ya no estar vigente, por favor proceda a inactivarlo"
+          "eliminarFallido2": " no puede ser eliminado: Ya se encuentra creado, en caso de ya no estar vigente, por favor proceda a inactivarlo",
+          "errorIngresoHoraInicial": "Para el recorrido \"{{recorrido}}\" no puede editarse la hora inicio \"{{horaInicio}}\", esta hora se calcula automáticamente: En caso de requerir cambiar esta información, se debe cambiar la hora fin del recorrido anterior",
+          "ingresarHoraFinal": "Ingrese la Hora final del anterior registro, para poder calcular la hora inicial del nuevo",
+          "tipoNombreRecorridoRepetidosError": "Filas {{filaRep1}} y {{filaRep2}}: El recorrido \"{{recorrido}}\" se encuentra repetido, porfavor validar",
+          "horaMayorError" : "Fila {{filaRep1}}: La hora final del recorrido no puede ser menor a la hora inicial, por favor validar",
+          "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío"
       },
       "TABLA1": {
           "headerTabla0": "",
@@ -346,6 +353,13 @@
       "titulo": "Tipo de Empresa",
       "clasificacionOrg": "Clasificación de la Organización",
       "actividadEconomica": "Actividad Económica de la Organización",
+      "pestana11" : "Configurar Caracteristicas Perosnas Jurídicas",
+      "pestana12" : "Configurar Caracteristicas Perosnas Naturales",
+      "pestana21" : "Grupo Étnico",
+      "pestana22" : "Nivel de Ecolaridad",
+      "pestana23" : "Sexo",
+      "pestana24" : "Estado Civil",
+      "pestana25" : "Categoría de Discapacidad",
       "FILTROS": {
           "filtroOrganizmo": "Organismo a Configurar",
           "filtroOrganizmoPlaceHolder": "Ingrese aquí el organismo a configurar",
@@ -356,12 +370,16 @@
           "exito":"Operación de guardar ejecutada con exito",
           "falloGuardar":"Se ha presentado un error al guardar",
           "errorGuardar": "Diligenciar todos los campos requeridos",
-          "falloObtenerAcionesDocumentales":"Error al obtener las Acciones Documentales",
-          "identificacionRepetida": "El tipo de identificación, se encuentra repetido, por favor validar",
-          "guardarError" : "Error al guardar",
-          "errorHoraInicio": "La hora final del recorrido no puede ser menor a la hora inicial, por favor validar",
-          "eliminarFallido1": "El recorrido ",
-          "eliminarFallido2": " no puede ser eliminado: Ya se encuentra creado, en caso de ya no estar vigente, por favor proceda a inactivarlo"
+          "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+          "campoTipoEmpresaRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El \"Tipo de Empresa\" \"{{tipoEmpresa}}\" se encuentra repetido, porfavor validar", 
+          "campoCalsificacionRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El (la) característica \"Calsificación de la Organización\" \"{{calsificacion}}\" se encuentra repetida, porfavor validar",
+          "campoActividadEconomicaRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El (la) característica \"Actividad Economica\" \"{{actividad}}\" se encuentra repetida, porfavor validar",
+          "campoGrupoEtnicoRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El \"Grupo Étnico\" \"{{caracteristica}}\" se encuentra repetida, porfavor validar",
+          "campoNivelEscolaridadRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El (la) característica \"Nivel de Escolaridad\" \"{{caracteristica}}\" se encuentra repetida, porfavor validar",
+          "campoSexoRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El (la) característica \"Sexo\" \"{{caracteristica}}\" se encuentra repetida, porfavor validar",
+          "campoEstadoCivilRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El (la) característica \"Estado Civil\" \"{{caracteristica}}\" se encuentra repetida, porfavor validar",
+          "campoDiscapacidadRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El (la) característica \"Categoría de Discapacidad\" \"{{caracteristica}}\" se encuentra repetida, porfavor validar",  
+          "eliminarCAracteristicaTerceroError": "El (la) característica \"{{pestaña}}\" \"{{caracteristica}}\" no puede ser eliminado: Se encuentra asociado a uno o más terceros en el sistema"
       },
       "TABLA1": {
           "headerTabla1": "Tipo de Empresa",
@@ -374,6 +392,26 @@
       "TABLA3": {
           "headerTabla1": "Actividad Económica de la Organización",
           "headerTabla2": "Activo"
+      },
+      "TABLA4": {
+        "headerTabla1": "Grupo Étnico",
+        "headerTabla2": "Activo"
+      },
+      "TABLA5": {
+        "headerTabla1": "Nivel de Escolaridad",
+        "headerTabla2": "Activo"
+      },
+      "TABLA6": {
+        "headerTabla1": "Sexo",
+        "headerTabla2": "Activo"
+      },
+      "TABLA7": {
+        "headerTabla1": "Estado Civil",
+        "headerTabla2": "Activo"
+      },
+      "TABLA8": {
+        "headerTabla1": "Categoría de Discapacidad",
+        "headerTabla2": "Activo"
       }
   },
   
@@ -381,7 +419,7 @@
     "titulo": "Configurar Tipos de Radicado",
     "titulo3": "Configurar Categorías del Radicado",
     "titulo5": "Asociar Lista de Requisitos",
-    "pestana1": "Tipos de Radicaco",
+    "pestana1": "Tipos de Radicado",
     "pestana2": "Categoria del Radicado",
     "pestana3": "Lista de requisitos",
     "pestana31": "Parametrizar Lista de Requisitos",
@@ -392,7 +430,11 @@
     "FILTROS": {
         "filtroRadicado": "Filtar por Tipo Radicado",
         "subRadicado": "Filtar por Descripción (Subtipo de Radicado)",
-        "tituloTabla": "Recorridos de Reparto Documentos Físicos"
+        "tituloTabla": "Recorridos de Reparto Documentos Físicos",
+        "filotrRadicado": "Tipo de Radicado",
+        "filotrSubRadicado": "Subtipo Radicado",
+        "placeHolderFiltroRadicado" : "Ingrese aquí el Radicado a filtrar",
+        "placeHolderFiltroSubradicado": "Ingrese aquí el Subtipo de radicado a filtrar"
     },
     "MENSAJES": {
         "guardar":"Guardar",
@@ -414,7 +456,12 @@
         "elminarSubtipoRadicadoError": "El subtipo {{descripcion}} no puede ser eliminado: Se encuentra asociado a uno o más borradores y/o radicados en el sistema",
         "elminarCategoriaError": "No se puede eliminar la categoría \"{{descripcion}}\" seleccionada dado que ya está asociada a tipos de radicados",
         "elminarCategoriaPrecargadaError": "No se puede eliminar la categoría \"{{descripcion}}\" seleccionada, esta configuración es estándar para el sistema",
-        "campoRepetidoCategoriaRadicadoError": "El código y/o nombre \"{{descripcion}}\" se encuentra repetido"
+        "campoRepetidoCategoriaRadicadoError": "El código y/o nombre \"{{descripcion}}\" se encuentra repetido",
+        "tipoRequisitoRepetidosError": "Filas {{filaRep1}} y {{filaRep2}}: El requisito  \"{{descripcion}}\" se encuentra repetido, porfavor validar",
+        "requisitoRepetidosError": "Filas {{filaRep1}} y {{filaRep2}}: El requisito  \"{{descripcion}}\" ya se encuentra creado",
+        "requisitoRadicadoAsociado": "No se puede modificar el requisito \"{{requisito}}\" ya que se encuentra asociado al tipo de radicado \"{{tipoRadicado}}\" y subtipo de radicado \"{{subRadicado}}\", los cuales están vinculados a un documento radicado",
+        "requisitoRadicadoAsociado2": "No es posible eliminar el requisito \"{{requisito}}\"  ya que está asociado a un tipo y subtipo de radicado y/o se encuentra asociado a un documento radicado en el sistema",
+        "requisitoRadicadoAsociado3": "No es posible eliminar la relación del requisito \"{{requisito}}\" con el tipo de radicado \"{{tipoRadicado}}\" y subtipo de radicado \"{{subRadicado}}\" porque existen documentos radicados asociados a esta configuración"
   
     },
     "TABLA1": {
@@ -433,7 +480,7 @@
         "headerTabla6": "Modificar Días",
         "headerTabla7": "Activo",
         "headerTabla8": "Ventanila de Entrada",
-        "headerTabla9": "Radicación Verval",
+        "headerTabla9": "Radicación Verbal",
         "headerTabla10": "Comunicaciones Oficiales",
         "headerTabla11": "Ventanilla Virtual",
         "headerTabla12": "Anónimo"
@@ -482,7 +529,7 @@
         "eliminarFallido2": " no puede ser eliminado: Ya se encuentra creado, en caso de ya no estar vigente, por favor proceda a inactivarlo",
         "repetidos": "Existen registros repetidos para Tipo de Anexo y Anexo Físico",
         "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
-        "campoEjeRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El Eje Temático \"{{eje}}\" se encuentra repetido",
+        "campoEjeRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El Eje Temático \"{{eje}}\" se encuentra repetido, por favor validar.",
         "guradarRelacionEjesDependenciaExito": "Los ejes temáticos seleccionados fueron vinculados exitosamente al organismo o dependencia \"{{dependencia}}\"",
         "ejeTematicoGuardarExito": "Los ejes temáticos se guardaron exitosamente",
         "ejeTematicoEliminarErrorDepe": "El eje temático \"{{eje}}\" no puede ser eliminado porque está vinculado a las dependencias {{dependencias}} elimine la asociación y luego realice la eliminación",
@@ -545,7 +592,18 @@
         "guardar":"Guardar",
         "exito":"Operación de guardar ejecutada con exito",
         "falloGuardar":"Se ha presentado un error al guardar",
-        "errorGuardar": "Diligenciar todos los campos requeridos"
+        "errorGuardar": "Diligenciar todos los campos requeridos",
+        "eliminarRutaError": "La ruta \"{{ruta}}\" ya se encuentra asociado, no puede ser eliminado: debido a que se encuentra asociada a uno o más borradores y/o radicados en el sistema",
+        "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+        "campoRutaRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: La ruta \"{{ruta}}\" ya se encuentra registrado",
+        "campoRutaRepetidoFiltroError": "Fila {{filaRep1}}: La ruta \"{{ruta}}\" ya se encuentra registrado",
+        "eliminarMensajeroError": "El Mensajero \"{{mensajero}}\" ya se encuentra asociado, no puede ser eliminado: debido a que se encuentra asociada a uno o más borradores y/o radicados en el sistema",
+        "campoMensajeroRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El Mensajero \"{{mensajero}}\" ya se encuentra registrado",
+        "campoMensajeroRepetidoFiltroError": "Fila {{filaRep1}}: El Mensajero \"{{mensajero}}\" ya se encuentra registrado",
+        "eliminarEmpresaError" : "La empresa de mensajería \"{{empresa}}\" ya se encuentra asociado, no puede ser eliminado: debido a que se encuentra asociada a uno o más borradores y/o radicados en el sistema",
+        "campoEmpresaRepetidoError" : "Filas {{filaRep1}} y {{filaRep2}}: La empresa  \"{{empresa}}\" ya se encuentra registrado",
+        "campoEmpresaRepetidoFiltroError": "Fila {{filaRep1}}: La empresa \"{{empresa}}\" ya se encuentra registrado"         
+            
     },
     "TABLA1": {
         "headerTabla0": "",
@@ -600,6 +658,64 @@
         "headerTabla1": "Código tipo de Comunicación Oficial",
         "headerTabla2": "Cargo Firmante"
     }
-  }
+  },
+  
+  "CUMCO020": {
+      "pField1": "Configurar Procesos",
+      "pField2": "Configurar Procedimientos de Procesos",
+      "pField3": "Asociar Procesos a Dependencias",
+      "pField4": "Asociar Procedimientos a Dependencias",
+      "pestana1": "Configurar Procesos y Procedimientos",
+      "pestana2": "Asociar Procesos y Procedimientos a Dependencias",
+      "FILTROS": {
+          "filtroProceso": "Filtrar por Proceso:",
+          "filtroProcesoPlaceHolder": "Ingresar aquí el Proceso a Filtrar",
+          "filtroProcedimiento": "Filtrar por Procedimiento:",
+          "filtroProcedimientoPlaceHolder": "Ingresar aquí el Procedimiento a Filtrar",
+          "filtroDependencia": "Organismo o Dependencia a Configurar",
+          "filtroDependenciaPlaceHolder": "Ingresar aquí el Organismo o Dependencia a Filtrar"
+      },
+      "MENSAJES": {
+          "guardar":"Guardar",
+          "error":"Error",
+          "exito":"Operación de guardar ejecutada con exito",
+          "falloGuardar":"Se ha presentado un error al guardar",
+          "campoFilaVacioError": "Fila {{filaVacia}}: El campo \"{{campoVacio}}\" no puede estar vacío",
+          "campoCodigoRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El proceso \"{{codigoNombre}}\", se encuentra repetido, por favor validar",
+          "eliminarProcesoProcedimientoError" : "El proceso \"{{proceso}}\" no puede ser eliminado ya que se encuentra asociado a uno o más procedimientos",    
+          "eliminarProcesoDependenciaError": "El proceso \"{{proceso}}\" no puede ser eliminado: Se encuentra vinculado a los organismos o dependencias \"{{nombresDependencia}}\"",    
+          "eliminarProcedimientoRadicadoError" : "El procedimiento \"{{procedimiento}}\" asociado al proceso \"{{proceso}}\" no puede ser eliminado: Se encuentra asociado a uno o más borradores y/o radicados en el sistema",
+          "campoCodigoProcedimientoRepetidoError": "Filas {{filaRep1}} y {{filaRep2}}: El procedimiento \"{{codigoNombre}}\", se encuentra repetido, por favor validar",
+          "campoCodigoProcedimientoRepetidoFiltradoError": "Fila {{filaRep1}}: El procedimiento \"{{codigoNombre}}\" se encuentra repetido en los regitros filtrados, por favor validar",
+          "campoCodigoProcedimientoRepetidoProcesoError": "Fila {{filaRep1}}: El procedimiento \"{{procedimiento}}\" ya se encuentra asociado al proceso \"{{proceso}}\" ",
+          "campoCodigoProcesoRepetidoFiltradoError": "Fila {{filaRep1}}: El proceso \"{{codigoNombre}}\" se encuentra repetido en los regitros filtrados, por favor validar",
+          "eliminarProcesoDependenciaError2": "La relación del proceso \"{{proceso}}\" con el organismo o dependencia \"{{organismo}}\" no puede ser eliminada: Se encuentra asociada a uno o más borradores y/o radicados en el sistema",
+          "eliminarProcesoDependenciaError3": "La relación del proceso \"{{proceso}}\" con el organismo o dependencia \"{{organismo}}\" no puede ser eliminada, ya que tiene procedimientos asociados a la dependencia",  
+          "requerirGuardarRelacion": "Se requiere guardar la relación del proceso \"{{proceso}}\" con el organismo o dependencia \"{{organismo}}\" antes de asociar los procedimientos a dicha dependencia",
+          "eliminarProcedimientoDependenciaError2": "La relación del procedimiento \"{{procedimiento}}\" con el organismo o dependencia \"{{organismo}}\" no puede ser eliminada: Se encuentra asociada a uno o más borradores y/o radicados en el sistema",
+          "eliminarProcedimientoDependenciaError3":  "La relación del procedimiento(s) \"{{procedimiento}}\" con el organismo o dependencia \"{{organismo}}\" no puede ser eliminada(s): Se encuentra(n) asociada(s) a uno o más borradores y/o radicados en el sistema"              
+      },
+      "TABLA1": {
+          "headerTabla0": "",
+          "headerTabla1": "Código",
+          "headerTabla2": "Nombre",
+          "headerTabla3": "Descripción",
+          "headerTabla4": "Activo"
+      },
+      "TABLA2": {
+          "headerTabla1": "Proceso",
+          "headerTabla2": "Código Procedimiento",
+          "headerTabla3": "Nombre Procedimiento Documental",
+          "headerTabla4": "Descripción",
+          "headerTabla5": "Activo"
+      },
+      "TABLA3": {
+        "headerTabla1": "Proceso"
+      },
+      "TABLA4": {
+        "headerTabla1": "Procedimiento"
+      }
+    
+    }
   
   }
